# lib_sonarcov

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yaml  package.xml
include/lib_sonarcov/: AngleUtils.h  CoverageRecorder.h  PathPlan.h  SwathRecord.h  SwathRecorder.h
src/: CoverageRecorder.cpp  PathPlan.cpp  SwathRecord.cpp  SwathRecorder.cpp
statick_config/rsc/: config.yaml  exceptions.yaml
tests/: CMakeLists.txt  covRec_test.cpp  drawPlannerTest.py  pathPlan_test.cpp  swathRecorder_test.cpp  testlogger.h
tests/PathPlannerOutput/: CanGenerateNoisyPlan.dbg  CanGenerateSimplePlan.dbg
unit_tests/: CMakeLists.txt  swathRecord_test.cpp  swathRecorder_test.cpp
